feat.(auth): Verify Email

--- a/apps/mailer/src/templates/email-confirmation.hbs
+++ b/apps/mailer/src/templates/email-confirmation.hbs
@@ -115,8 +115,8 @@
 			padding-top: 25px;
 			color: #000000;
 			font-family: sans-serif;" class="header">
-              <img border="0" vspace="0" hspace="0" src="http://www-qa.dideea.com/promo/img/logo-white-bg.png"
-                width="200" height="58" alt="The Idea" title="The Idea" />
+              <img border="0" vspace="0" hspace="0" src="https://res.cloudinary.com/dbllvvcv5/image/upload/v1711022520/karyaciptamagnet/bxqrmzzjgsk9c4cwr6c9.png"
+                width="200" height="200" alt="The Idea" title="The Idea" />
             </td>
           </tr>
           <tr>
